[workspace]
members = ["devhub_common", "discussions", "community", "community-factory"]

[workspace.package]
repository = "https://github.com/dj8yfo/neardevhub-contract"

[workspace.dependencies]
near-sdk = "5.5.0"
near-contract-standards = "5.5.0"
devhub_common = { path = "./devhub_common" }
cargo-near-build = { version = "0.1.1", git = "https://github.com/dj8yfo/cargo-near.git", rev = "df469f314a387139c0f37570ce15ad1071491889" }

[package]
name = "devhub"
version = "0.2.0"
authors = ["NEAR DevHub <neardevhub.org>"]
edition = "2021"
repository.workspace = true

[lib]
crate-type = ["cdylib"]

# fields to configure build with WASM reproducibility, according to specs  
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md 
[package.metadata.near.reproducible_build]
# image from cargo-near pull#198
image = "dj8yfo/sourcescan:0.x.x-dev-pr-231-nightly"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:bea8f17ef8d18a3ac1108733277495c5b2c9e64351a0b34d755458b30b6a1933"
passed_env = ["KEY", "GOOGLE_QUERY"]
container_build_command = ["cargo", "near", "build"]

[dependencies]
near-sdk = { workspace = true, features = ["unstable"] }
near-contract-standards.workspace = true
serde_json = { version = "1.0", features = ["preserve_order"] }
devhub_common.workspace = true
html-escape = "0.2.13"

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
insta = { version = "1.31.0", features = ["json", "redactions"] }
regex = "1"
near-workspaces = { version = "0.14.0", features = [
  "unstable",
], default-features = false }
cargo-near-build.workspace = true
tokio = { version = "1.10.0", features = ["full"] }
anyhow = "1.0"

# this profile is important as it applies to contract members of workspace: 
# ["discussions", "community", "community-factory"]
[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true
