[package]
name = "devhub-community-factory"
version = "0.1.0"
authors = ["NEAR DevHub <neardevhub.org>"]
edition = "2021"
repository.workspace = true

[lib]
crate-type = ["cdylib"]

# fields to configure build with WASM reproducibility, according to specs  
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md 
[package.metadata.near.reproducible_build]
# image from cargo-near pull#198
image = "dj8yfo/sourcescan:0.x.x-dev-pr-228"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:188ce10f85c2e57ed4bab3c174104bfa11591eebb55dff1915b56fd0f1919682"
passed_env = ["KEY", "GOOGLE_QUERY"]
container_build_command = ["cargo", "near", "build"]

[dependencies]
near-sdk.workspace = true
devhub_common.workspace = true

[build-dependencies]
cargo-near-build = { workspace = true, features = ["build_script"] }
