[package]
name = "devhub-community"
version = "0.1.0"
authors = ["NEAR DevHub <neardevhub.org>"]
edition = "2021"
repository.workspace = true

[lib]
crate-type = ["cdylib"]

# fields to configure build with WASM reproducibility, according to specs  
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md 
[package.metadata.near.reproducible_build]
# image from cargo-near pull#198
image = "dj8yfo/sourcescan:0.x.x-dev-pr-226"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:a33c44bc06ae8411458fb23cf57b6d760f51592481276f66f5bc292ed6b80378"

[dependencies]
near-sdk.workspace = true
devhub_common.workspace = true

[build-dependencies]
cargo-near-build = { workspace = true, features = ["build_script"] }
