[package]
name = "devhub-community"
version = "0.1.0"
authors = ["NEAR DevHub <neardevhub.org>"]
edition = "2021"
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.near.reproducible_build]
# image from cargo-near pull#198
image = "dj8yfo/sourcescan:0.x.x-dev-pr-231-nightly"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:bea8f17ef8d18a3ac1108733277495c5b2c9e64351a0b34d755458b30b6a1933"
passed_env = ["KEY", "GOOGLE_QUERY"]
container_build_command = ["cargo", "near", "build"]

[dependencies]
near-sdk.workspace = true
devhub_common.workspace = true

[build-dependencies]
cargo-near-build = { workspace = true, features = ["build_script"] }
