[package]
name = "devhub-discussions"
version = "0.1.0"
authors = ["NEAR DevHub <neardevhub.org>"]
edition = "2021"
repository.workspace = true

[lib]
crate-type = ["cdylib"]

# fields to configure build with WASM reproducibility, according to specs  
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md 
[package.metadata.near.reproducible_build]
# image from cargo-near pull#198
image = "dj8yfo/sourcescan:0.x.x-dev-pr-228"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:35b35645c33d6271d06e339f7bfd1bfc276384e7285767a25c30506f4aeb3d03"
passed_env = ["KEY", "GOOGLE_QUERY"]
container_build_command = ["cargo", "near", "build"]

[dependencies]
near-sdk.workspace = true
devhub_common.workspace = true
